components/contact-form/contact-form.css
body {
  padding:50px; /* temporary, to visualize the component  */
}

.contact-form-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%;
}

.contact-form textarea {
  resize: none;
}

.contact-form input,
.contact-form textarea {
  width: 100%;
  padding: 0.9rem;
  border: 1px solid var(--color-neutral-400);
  border-radius: 0.5rem;
  outline: none; /* Remove browser's default outline to showcase custom border color on focus */
}

.contact-form-btn {
  align-self: center;
  padding: 0.9rem 1.5rem;
  background-color: var(--color-tertiary);
  color: white;
  border: none;
  border-radius: 0.5rem;
  font-size: var(--font-size-m);
  cursor: pointer;
  user-select: none;
  -webkit-tap-highlight-color: transparent; /* Remove mobile tap highlight */
}

/* Transitions for smooth visual feedback on interactions: */
.contact-form input,
.contact-form textarea {
  transition: border-color 0.2s ease, color 0.2s ease;
}

.contact-form-btn {
  transition: background-color 0.2s ease, transform 0.1s ease;
}

/* Hover */ 
@media (hover: hover) and (pointer: fine) { /*Restrict hover to devices with hover capability and fine pointer */
  .contact-form-btn:hover {
    background-color: var(--color-tertiary-dark);
  }
}

/* Focus */
.contact-form input:focus,
.contact-form textarea:focus {
  border-color: var(--color-tertiary-dark);
}

.contact-form input:focus::placeholder,
.contact-form textarea:focus::placeholder {
  color: var(--color-tertiary-dark);
}

/* Focus-visible */
/* Override global focus-visible styles for this component.
This stylesheet is loaded after global styles so it can replace default keyboard navigation styles. */
.contact-form input:focus-visible,
.contact-form textarea:focus-visible {
  border-color: var(--color-tertiary-dark);
  color: var(--color-tertiary-dark);
}
.contact-form-btn:focus-visible {
  outline: none;
  background-color: var(--color-tertiary-dark);
}

/* Active*/
.contact-form-btn:active {
  transform: scale(0.98);
}

/*media queries*/
@media (min-width: 768px) {
  .contact-form {
    max-width: 600px;
  }
}

